--- a/config/database.yml
+++ b/config/database.yml
@@ -14,15 +14,15 @@ default: &default
 
 development:
   <<: *default
-  database: helping_comminuty_development
+  database: helping_community_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: helping_comminuty_test
+  database: helping_community_test
 
 production:
   <<: *default
-  database: helping_comminuty_prd
+  database: helping_community_prd
