--- a/config/database.yml
+++ b/config/database.yml
@@ -8,12 +8,12 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
-  username: postgres
   password: 
   host: <%= ENV['DEVELOPMENT_DATABASE_HOST'] %>
 
 development:
   <<: *default
+  username: postgres
   database: helping_community_development
 
 # Warning: The database defined as "test" will be erased and
@@ -21,6 +21,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: 
   database: helping_community_test
 
 production:
