--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
   pool: 5
   timeout: 5000
   password: 
-  username: #postgresql
+  username: 
   host: <%= ENV['DEVELOPMENT_DATABASE_HOST'] %>
 
 development:
